<resources>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_systems">Systems</string>
    <string name="title_games">Games</string>
    <string name="title_settings">Settings</string>
    <string name="recent">Recents</string>
    <string name="favorites">Favorites</string>
    <string name="discover">Discover</string>
    <string name="rescan">Rescan</string>
...

    <string name="settings_category_general">General</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_misc">Miscellaneous</string>
    <string name="settings_title_enable_autosave">Autosave state</string>
    <string name="settings_description_enable_autosave">Save state when exiting via game menu</string>
    <string name="settings_title_enable_touch_feedback">Control haptics</string>
    <string name="settings_description_touch_haptics">Feedback for console and game controls. Follows Android touch feedback settings.</string>
    <string name="settings_title_tilt_sensitivity">Tilt sensor sensitivity</string>
    <string name="settings_title_hd_quality">HD mode quality</string>
    <string name="settings_title_maximum_cache_usage">Cache size limit</string>

    <string name="settings_title_hd_mode">HD mode</string>
...
